Adding Specification to JPA Executors.
