# src/main/java/com/abnamro/service/ReciepesApiDelegateImpl.java
@@ -5,10 +5,14 @@ import com.abnamro.entity.Reciepes;
 import com.abnamro.exception.ReciepeException;
 import com.abnamro.model.Reciepe;
 import com.abnamro.repository.ReciepeRepository;
+import com.abnamro.repository.ReciepeSpecification;
 import com.abnamro.service.mapper.RecipeMapper;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.dao.DataAccessException;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -43,21 +47,57 @@ public class ReciepesApiDelegateImpl implements ReciepesApiDelegate {
 
     @Override
     public ResponseEntity<List<Reciepe>> findReciepes(String dishType,
-                                                      Integer servings,
-                                                      String ingredient,
-                                                      String additionalContent,
-                                                      String name) {
+                                               Integer servings,
+                                               String key,
+                                               String ingredient,
+                                               String search,
+                                               String name,
+                                               Integer start,
+                                               Integer end) {
 
         try {
-            List<Reciepes> reciepes =
-                    reciepeRepository.findReciepesByNameAndIngredientAndServingsAndAdditionalData(name, servings, additionalContent, dishType,ingredient);
 
-            if (null == reciepes || reciepes.size() == 0) {
+            Specification<Reciepes> specification = null;
+            Specification<Reciepes> dishTypeEquals = null;
+            Specification<Reciepes> ingredientType = null;
+            Specification<Reciepes> searchContains = null;
+            Specification<Reciepes> servingsEquals = null;
+
+            if (null != dishType) {
+                dishTypeEquals = ReciepeSpecification.dishTypeEquals(dishType);
+            }
+
+            if (null != name) {
+                specification = ReciepeSpecification.nameEquals(name);
+            }
+
+            if (null != ingredient && "EXCLUDE".equalsIgnoreCase(key)) {
+                ingredientType = ReciepeSpecification.ingredientsExcludes(ingredient);
+            }
+
+            if (null != ingredient && "INCLUDE".equalsIgnoreCase(key)) {
+                ingredientType = ReciepeSpecification.ingredientsIncludes(ingredient);
+            }
+
+            if (null != search) {
+                searchContains = ReciepeSpecification.instructionsContains(search);
+            }
+
+            if (null != servings) {
+                servingsEquals = ReciepeSpecification.servingsEquals(servings);
+            }
+
+            Page<Reciepes> reciepes = reciepeRepository.findAll(Specification.where(dishTypeEquals).and(specification)
+                            .and(ingredientType).and(searchContains).and(servingsEquals)
+                    , PageRequest.of(start, end));
+
+            if (reciepes.isEmpty()) {
                 return new ResponseEntity<>(HttpStatus.NO_CONTENT);
             }
 
             List<Reciepe> reciepesData = reciepes.stream().map(recipe -> recipeMapper.mapRecipesDomainToRecipe(recipe)).collect(Collectors.toList());
             return ResponseEntity.ok(reciepesData);
+
         }catch (DataAccessException dao) {
             log.error("Error while fetching the recipes."  , dao);
             throw new ReciepeException("Error while fetching the recipes.");
